# docs/swagger.json
@@ -15,6 +15,51 @@
     },
     "host": "localhost:3000",
     "paths": {
+        "/airlines/searchAirlines": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "airlines"
+                ],
+                "summary": "Search Airlines",
+                "parameters": [
+                    {
+                        "description": "airlines body",
+                        "name": "req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/airlines.SearchAirlinesRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/airlines.SearchAirlinesResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/responses.DefaultResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/airports/searchAirports": {
             "post": {
                 "consumes": [
@@ -244,6 +289,31 @@
         }
     },
     "definitions": {
+        "airlines.SearchAirlinesRequest": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "query": {
+                    "type": "string"
+                }
+            }
+        },
+        "airlines.SearchAirlinesResponse": {
+            "type": "object",
+            "properties": {
+                "airlines": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Airline"
+                    }
+                }
+            }
+        },
         "airports.SearchAirportsRequest": {
             "type": "object",
             "properties": {
@@ -302,6 +372,40 @@
                 }
             }
         },
+        "model.Airline": {
+            "type": "object",
+            "required": [
+                "active",
+                "country",
+                "name"
+            ],
+            "properties": {
+                "active": {
+                    "type": "boolean"
+                },
+                "alias": {
+                    "type": "string"
+                },
+                "callsign": {
+                    "type": "string"
+                },
+                "country": {
+                    "type": "string"
+                },
+                "iata": {
+                    "type": "string"
+                },
+                "icao": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "model.Airport": {
             "type": "object",
             "required": [
@@ -336,7 +440,7 @@
                     "type": "string"
                 },
                 "timezone": {
-                    "type": "integer"
+                    "type": "string"
                 }
             }
         },
